--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Workit</title>
 </head>
 <body>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores cum eaque eveniet fuga id incidunt sed, tempore
-unde! Fuga, vel.
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores cum eaque
 </body>
 </html>
